ci(deploy-gke): make manual to stop failing on main pushes
The job failed on every main merge because the cluster is destroyed by bin/demo-down.sh after each validation cycle (ADR-0022). Argo CD reconciles from main anyway (ADR-0015), so the job is a redundant convenience, not a requirement.

Matches the pattern used for deploy:eks, deploy:aks, deploy:cloud-run, deploy:fly, deploy:k3s — all manual. allow_failure:true so a forgotten click does not fail the pipeline.

TASKS.md: check off the 'make deploy:gke manual' item, add the code-quality javac --enable-preview item surfaced during the MR 77 post-merge pipeline triage.